--- a/css/covid19.css
+++ b/css/covid19.css
@@ -49,9 +49,7 @@ height: 400px;
         
         .banner-demo::before{
             content: "";
-            background: url("/images//covid3.jpg") no-repeat;
-            background-size: cover;
-            background-position-x: center right 0ex;
+            background: url("/images//covid3.jpg") no-repeat center center/cover;
             width: 100%;
             height: 200px;
             position: absolute;
