--- a/css/covid19.css
+++ b/css/covid19.css
@@ -43,17 +43,9 @@ height: 400px;
 
 
 @media(max-wdth:700px){
-    .banner-demo{
-        height: 200px;
-        }
+   .mts{
+        padding-left: -20px !important;
+        padding-right: -20px !important;
+    }
         
-        .banner-demo::before{
-            content: "";
-            background: url("/images//covid3.jpg") no-repeat center center/cover;
-            width: 100%;
-            height: 200px;
-            position: absolute;
-            opacity:.4;
-           
-        }
 }
