--- a/css/covid19.css
+++ b/css/covid19.css
@@ -42,10 +42,13 @@ height: 400px;
 
 
 
-@media(max-wdth:700px){
+@media(max-width:500px){
    .mts{
         padding-left: -20px !important;
         padding-right: -20px !important;
+    }
+    .banner-demo{
+        display: none;
     }
         
 }
