--- a/css/covid19.css
+++ b/css/covid19.css
@@ -24,11 +24,11 @@ height: 400px;
 
 .banner-demo::before{
     content: "";
-    background: url("/images//covid3.jpg") no-repeat center center/cover;
+    background: url("https://source.unsplash.com/random?covid-19") no-repeat top center/cover;
     width: 100%;
     height: 400px;
     position: absolute;
-    opacity:.4;
+    opacity:.5;
    
 }
 
